src/sass/layouts/_modal-card.scss
.is-open {
  background-color: $secondary-color;
  // outline: 1px solid blue;

  @media screen and (min-width: 320px) and (max-width: 767px) {
    display: flex;
    width: 280px;
    // height: 958px;
  }

  @media screen and (min-width: 768px) and (max-width: 1023px) {
    display: flex;
    width: 618px;
    // height: 562px;
  }

  @media screen and (min-width: 1024px) {
    display: flex;
    width: 882px;
    // height: 600px;
  }
}

.youtubeBtn {
  margin: 10px auto;
  padding: 10px;
  border: 1px solid black;

  display: flex;
  justify-content: center;
  align-items: center;
  text-transform: uppercase;

  box-sizing: border-box;
  border-radius: 5px;
  background: rgba(0, 0, 0, 0);

  font-family: $primary-font;
  font-style: normal;
  font-weight: 500;
  font-size: 12px;
  line-height: 1.33;

  cursor: pointer;

  @media screen and (min-width: 320px) and (max-width: 1023px) {
    width: 100%;
  }

  @media screen and (min-width: 1024px) {
    margin: 10px auto 0px 0px;
    width: 287px;
  }

  &-close {
    // outline: 1px solid $primary-color;
    position: absolute;
    border: none;
    outline-style: none;

    width: 30px;
    height: 30px;

    cursor: pointer;

    @media screen and (min-width: 320px) and (max-width: 767px) {
      top: -28px;
      right: 0px;
    }

    @media screen and (min-width: 768px) and (max-width: 1023px) {
      top: -28px;
      right: 0px;
    }

    @media screen and (min-width: 1024px) {
      top: -28px;
      right: 0px;
    }
  }
}

.modal {
  font-family: $primary-font;
  font-style: normal;
  color: $primary-color;
  background-color: $secondary-color;

  @media screen and (min-width: 320px) and (max-width: 767px) {
    transform: translate(0px, 200px);
    width: 280px;
    // video_Yana
    // min-height: 400px;
  }

  @media screen and (min-width: 768px) and (max-width: 1023px) {
    display: flex;
    width: 618px;
    min-height: 400px;
  }

  @media screen and (min-width: 1024px) {
    display: flex;
    width: 882px;
    min-height: 400px;

  }

  &-container {
    // outline: 1px solid orange;
    width: auto;
    height: auto;

    @media screen and (min-width: 320px) and (max-width: 767px) {
      padding: 1px 20px 28px 20px;

    }

    @media screen and (min-width: 768px) and (max-width: 1023px) {
      padding: 43px 30px 40px 30px;
      display: flex;
    }

    @media screen and (min-width: 1024px) {
      padding: 50px 30px 40px 30px;
      display: flex;
    }
  }

  &-img {
    // outline: 1px solid $primary-color;
    display: flex;
    align-items: center;

    overflow: hidden;
    border-radius: 5px;

    border-radius: 5px;

    @media screen and (min-width: 320px) and (max-width: 767px) {
      width: 240px;
      height: 357px;
      margin-top: 50px;
      margin-bottom: 30px;
    }

    @media screen and (min-width: 768px) and (max-width: 1023px) {
      width: 264px;
      height: 374px;
      margin-right: 32px;
    }

    @media screen and (min-width: 1024px) {
      width: 396px;
      height: 510px;
      margin-right: 30px;
    }
  }

  &-wrapper {
    // outline: 1px solid $primary-color;
    left: auto;

    @media screen and (min-width: 768px) and (max-width: 1023px) {
      width: 264px;
    }

    @media screen and (min-width: 1024px) {
      width: 396px;
    }
  }

  &-content {
    margin-bottom: 21px;

    &_title {
      text-transform: uppercase;
      max-width: 396px;
      margin-bottom: 20px;

      font-weight: 500;

      @media screen and (min-width: 320px) and (max-width: 1023px) {
        font-size: 20px;
        line-height: 23px;
      }

      @media screen and (min-width: 1024px) {
        font-size: 30px;
        line-height: 35px;
      }
    }

    &-list_wrapper {
      display: flex;
      margin-bottom: 10px;
    }
  }

  &-card {
    font-weight: 500;

    &_text {
      font-size: 12px;
      line-height: 20px;
    }

    &_list {
      &_left {
        margin-right: 39px;

        font-size: 12px;
        line-height: 16px;
        color: $modal-second-color;
      }

      &_right {
        font-size: 12px;
        line-height: 16px;
      }
    }
  }

  &-list {
    &_item {
      margin-bottom: 10px;
    }

    &_title {
      text-transform: uppercase;
      line-height: 16px;
    }

    &_genre {
      line-height: 16px;
    }
  }

  &-title_about {
    margin-bottom: 10px;

    font-weight: 500;
    font-size: 12px;
    line-height: 16px;
    text-transform: uppercase;
  }

  &-btn {
    &-container {
      display: inline-flex;
      margin-left: auto;

      cursor: pointer;
    }

    &-close {
      // outline: 1px solid $primary-color;
      border: none;

      outline-style: none;
      width: 30px;
      height: 30px;
      background-color: transparent;
      cursor: pointer;

      &_container {
        position: absolute;

        @media screen and (min-width: 320px) and (max-width: 767px) {
          top: 12px;
          left: 240px;
        }

        @media screen and (min-width: 768px) and (max-width: 1023px) {
          top: 6px;
          left: 583px;
        }

        @media screen and (min-width: 1024px) {
          top: 10px;
          left: 843px;
        }
      }
    }
  }
}

.close-svg {
  display: inline-flex;
}

.vote-avarage {
  display: inline-block;

  width: 33px;
  height: 15px;

  text-align: center;

  color: $secondary-color;
  background: $btn-color;
  border-radius: 5px;
}

.genre-id-modal {
  cursor: pointer;
  margin-right: 6px;
  font-style: normal;
  font-weight: 500;
  font-size: 12px;
  line-height: 16px;
  color: $primary-color;
  transition-property: color;
  transition-duration: 200ms;
  transition-timing-function: linear;
  transition-delay: 0;
}

.genre-id-modal:hover,
.genre-id-modal:focus {
  color: $accent-color;
  text-decoration: underline;
}

